--- a/public/css/PixelPainter.css
+++ b/public/css/PixelPainter.css
@@ -81,8 +81,7 @@ h1 {
   background-color: #fff;
   text-shadow: 2px 2px 4px #969696; }
   .control-btn:hover {
-    background-color: transparent;
-    color: #fff; }
+    background-color: transparent; }
 
 #current-color {
   width: 100%;
