--- a/sass/PixelPainter.scss
+++ b/sass/PixelPainter.scss
@@ -7,7 +7,7 @@
 
 html{
   // background-color: $brick_wall;
-  background-image: url('/images/brickwall_2.png');
+  background-image: url('../images/brickwall_2.png');
 }
 
 
